<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="mapKey">0tdPEceZNjepu9MuyVyMvM5g8wAq_k4Tr4yEU-A</string>
    <string name="mapKey_debug">0tdPEceZNjerVCskOf1FZSQQmEP8OutmB49Wq6Q</string>
    <string name="app_name">JCertif Network</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="login">Login </string>
    <string name="password">Mot de passe </string>
    <string name="remember_me">Se souvenir de moi</string>
    <string name="connecter">Se connecter</string>
    <string name="inscription">S\'inscrire</string>  
    <string name="cancel">Annuler</string>      
    <string name="name">Nom </string>
    <string name="firstname">Prénom </string>   
    <string name="berth_day">Date de naissance</string>   
    <string name="mail">Email</string>    
    <string name="tel">Tel</string>  
    <string name="payes">Pays : </string>   
    <string name="ville">Ville : </string>
    <string name="jcertif_newtork">Réseau JCertif</string>
    <string name="text_par_defaut">Ecrire un msg</string>
    <string name="data_mission">Veuillez remplire tout les champs</string>
    <string name="presentation">"Présentation : "</string>
    <string name="send_mail">Envoyer un mail</string>
    <string name="detail">Détail</string>
    <string name="share">Partager</string>
    <string name="add_comment">Ajouter commentaire</string>
    <string name="add_comments">Ajouter commentaire</string>   
    <string name="add_subject">Ajouter un sujet</string>
    <string name="public_by">"Publié par : "</string>
    <string name="your_presentation">Présentation</string>
    <string name="inscription_txt">Inscription</string>
    <string name="edit_article">Editer article</string>
    <string name="del_article">Supprimer article</string>
    <string name="leave">Quitter</string>
  	<string name="title">"Titre : "</string>
    <string name="url">"URL : "</string> 
    <string name="url_img">"URL IMG : "</string>
    <string name="decription">"Description : "</string>
    <string name="edit">Modifier</string>
    <string name="add">Ajouter</string>
    <string name="logout">Déconnexion</string>
    <string name="my_profil">Mon profil</string>
    <string name="on_ligne">En ligne</string>
    <string name="invisble">Hors ligne</string>
    <string name="aporpos">A propos</string>
    <string name="valider">Valider</string>
    <string name="add_rubrique">Paramètres</string>
    <string name="visite_site_web">Visiter le site web</string>
    <string name="msg1">JCertif is the biggest Java Community Conference in Central Africa.</string>
    <string name="msg2">JCertif allows attendees to collaborate and share the best practices on Java and Mobile Apps</string>
    <string name="map">Map</string>
    <string name="list">Liste</string>
    <string name="switch_txt">Recevoir des notivations pour chaque nouveauté</string>
    <color name="blue">#4F81BD</color>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="date_start">"Date de début : "</string>
    <string name="date_fin_txt">"Date de fin : "</string>
    <string name="lieu">Lieu : </string>
    <string name="set_resolut">Marquer comme résolu</string>    
    <string name="prob_connexion">Veuillez verifier votre connexion</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="save_info">Enregistre information</string>
    <string name="view_map">Afficher la carte</string>
    <string name="category">"Catégorie : "</string>
    <string name="contenu">"Contenu : "</string>
    <string name="findplace">Rechercher un endroit</string>
    <string name="add_news">Ajouter une actualité</string>
    <string name="management_admin">Gestion des admins</string>
    <string name="add_event">Ajouter un évènement</string>
    <string name="add_category">Ajouter une catégorie</string>
    <string name="add_photo">Ajouter une photo</string>
    <string name="add_video">Ajouter une vidéo</string>
    <string name="event">"Evenement : "</string>
    <string name="publier">Publier</string>
    <string name="ecrire_votre_message_ici">Ecrire votre message ici</string>
    <string name="publier_sur_votre_mure">Publier sur votre mure facebook</string>
    <string name="pays">Pays</string>
    <string name="ville2">Ville</string>
    <string name="saveplace">Enregistrer l\'endroit</string>

</resources>