<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:id="@+id/contenaire"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg3"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/authentification_menu"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
        android:gravity="center"
        android:paddingBottom="15dp"
        android:visibility="gone">
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:gravity="center"
	        android:paddingTop="7dp"
	        android:paddingBottom="7dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginLeft="10dp"
	        android:background="@drawable/shape_whate">

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="40dp"
	            android:orientation="horizontal" 
	            android:paddingLeft="3dp"
	            android:paddingRight="5dp">
	
	            <TextView
	                android:layout_width="130dp"
	                android:layout_height="fill_parent"
	                android:text="@string/login"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="@color/blue" 
	                android:textStyle="bold"
	                android:paddingLeft="5dp"
	                android:gravity="center_vertical"/>
	
	            <EditText
	                android:id="@+id/ville"
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:inputType="text"
	                android:background="@drawable/bg_btn1"
	                android:layout_marginTop="1.5dp"
	                android:layout_marginBottom="1.5dp"
	                android:paddingLeft="4dp"
	                android:paddingRight="4dp"
	                android:textColor="@color/blue"  />
	
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="40dp"
	            android:orientation="horizontal" 
	            android:paddingLeft="3dp"
	            android:paddingRight="5dp"
	            android:paddingTop="3dp">
	
	            <TextView 
	                android:layout_width="130dp"
	                android:layout_height="fill_parent"
	                android:gravity="center_vertical"
	                android:paddingLeft="5dp"
	                android:text="@string/password"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="@color/blue" 
	                android:textStyle="bold" />
	
	            <EditText
	                android:id="@+id/password"
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:inputType="textPassword"
	                android:background="@drawable/bg_btn1"
	                android:layout_marginTop="1.5dp"
	                android:layout_marginBottom="1.5dp"
	                android:paddingLeft="4dp"
	                android:paddingRight="4dp" 
	                android:textColor="@color/blue"  />
	
	        </LinearLayout>
	        
	    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="10dp" >

            <CheckBox 
		        android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="@color/blue"
                android:textStyle="bold"       
		        android:button="@drawable/checkbox_selector"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp" 
            android:gravity="center"
            android:paddingTop="20dp">

            <LinearLayout
                android:id="@+id/inscrire"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_off"               
                android:layout_marginRight="30dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inscription" 
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
	            
            </LinearLayout>

            <LinearLayout
                android:id="@+id/connecter"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_off"                  
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connecter" 
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
	            
            </LinearLayout>

        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
        android:gravity="center"
        android:visibility="gone">
        
        <ProgressBar
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:indeterminateDrawable="@drawable/loading_progress" />
        
     </LinearLayout>

</LinearLayout>